--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-user></app-user>
+<app-navbar></app-navbar>
+<div class="container">
+
+  <app-users></app-users>
+</div>
 <router-outlet></router-outlet>
