--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,4 +1,4 @@
-<app-post-form [currentPost]="currentPost" [isEdit]="isEdit" (newPost)="onNewPost($event)"></app-post-form>
+<app-post-form [currentPost]="currentPost" [isEdit]="isEdit" (updatedPost)="onUpdatedPost($event)" (newPost)="onNewPost($event)"></app-post-form>
 
 <h2>Posts</h2>
 <div class="card mb-3" *ngFor="let post of posts">
