--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,12 +1,23 @@
-<app-post-form [currentPost]="currentPost" [isEdit]="isEdit" (updatedPost)="onUpdatedPost($event)" (newPost)="onNewPost($event)"></app-post-form>
+<div class="container">
+  <app-post-form
+    [currentPost]="currentPost"
+    [isEdit]="isEdit"
+    (updatedPost)="onUpdatedPost($event)"
+    (newPost)="onNewPost($event)"
+  ></app-post-form>
 
-<h2>Posts</h2>
-<div class="card mb-3" *ngFor="let post of posts">
-  <div class="card-body ">
-    <h3>{{ post.title }}</h3>
-    <p>{{ post.body }}</p>
-    <hr>
-    <button (click)="removePost(post)" class="btn btn-danger"><i class="fa fa-remove"></i></button>
-    <button (click)="editPost(post)" class="btn btn-light"><i class="fa fa-pencil"></i></button>
+  <h2>Posts</h2>
+  <div class="card mb-3" *ngFor="let post of posts">
+    <div class="card-body ">
+      <h3>{{ post.title }}</h3>
+      <p>{{ post.body }}</p>
+      <hr />
+      <button (click)="removePost(post)" class="btn btn-danger">
+        <i class="fa fa-remove"></i>
+      </button>
+      <button (click)="editPost(post)" class="btn btn-light">
+        <i class="fa fa-pencil"></i>
+      </button>
+    </div>
   </div>
 </div>
