--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <h2>Welcome to Angular App</h2>
     <p>This was created as a test application by Varun Joshi to learn Angular 7 concepts    </p>
 
-    <button class="btn btn-secondary">Users Section</button>
-    <button class="btn btn-dark ml-3">Posts Section</button>
+    <button class="btn btn-secondary" routerLink="/users">Users Section</button>
+    <button class="btn btn-dark ml-3" routerLink="/posts">Posts Section</button>
 
 </div>
