--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,3 +1,9 @@
-<p>
-  post works!
-</p>
+<div class="container">
+  <a routerLink="/posts" class="btn btn-light btn-sm mb-3">Back</a>
+  <div class="card" *ngIf="post">
+    <div class="card-body">
+      <h3>{{ post.title }}</h3>
+      <p>{{ post.body }}</p>
+    </div>
+  </div>
+</div>
