Added Contact info

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,28 @@
 <div class="container">
-    <h2>Welcome to Angular App</h2>
-    <p>This was created as a test application by Varun Joshi to learn Angular 7 concepts    </p>
+  <h2>Welcome to Angular App</h2>
+  <p>
+    This was created as a test application by Varun Joshi to learn Angular 7
+    concepts
+  </p>
 
-    <button class="btn btn-secondary" routerLink="/users">Users Section</button>
-    <button class="btn btn-dark ml-3" routerLink="/posts">Posts Section</button>
+  <button class="btn btn-secondary" routerLink="/users">Users Section</button>
+  <button class="btn btn-dark ml-3" routerLink="/posts">Posts Section</button>
 
+  <hr />
+
+  <h5>Connect with Varun Joshi</h5>
+  <a href="https://www.facebook.com/varunjoshi95" target="_blank"
+    ><i class="fa fa-facebook-official mr-3" style="font-size:48px"></i
+  ></a>
+  <a href="https://www.linkedin.com/in/varunjoshi95/" target="_blank"
+    ><i class="fa fa-linkedin-square mr-3" style="font-size:48px"></i
+  ></a>
+
+  <a href=" https://www.instagram.com/varun0809/" target="_blank"
+    ><i class="fa fa-instagram mr-3" style="font-size:48px"></i
+  ></a>
+
+  <a href="https://twitter.com/varunjoshi995" target="_blank"
+    ><i class="fa fa-twitter-square mr-3" style="font-size:48px"></i
+  ></a>
 </div>
